fix: remove link overlapping on header

--- a/src/components/Atoms/Link/Link.scss
+++ b/src/components/Atoms/Link/Link.scss
@@ -1,7 +1,6 @@
 @import "../../../assets/theme/theme.scss";
 
 a {
-  position: relative;
   color: $dk-first-main !important;
 }
 
